package Restaurant;

public class Member {
    private int Number;

    public  Member(int number) {
        Number = number;
    }

    public int getNumber() {
        return Number;
    }
}
