package Restaurant;

import java.util.ArrayList;

public class arraylisttest {
    public static void selectionSort (Comparable[] list){
        ArrayList dlist = new ArrayList<>();
        dlist.add("Hello");
    }
}
